--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
         <p>Convert videos to any format with high quality and fast processing.</p>
         <div class="tool-card-footer">
             <span class="badge badge-free">FREE</span>
-            <a href="https://example.com/video-converter" class="/shorts-haxaa.html"></a>
+            <a href="https://example.com/video-converter" class="/tool/shorts-haxaa.html"></a>
             <button class="btn btn-primary">Use Tool</button>
                  </div>
                  </div>
